{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "fec58f94-72b1-4738-aaf8-5fb675234b00",
            "actions": [
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "63fc369c-371f-4614-9210-1417319afa7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fb5031ee-5912-4adc-8743-992189276738",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "FinishZone",
            "id": "28724479-fa23-4004-ac6a-851d9d04a4d0",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "662bfb43-bcda-493b-b1b4-c6469e74cf24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "301cfa7a-5de5-4fae-ae26-4d773a11a32c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}